fix(cta-section): add hr to sm, spacing adjustments

--- a/packages/web-components/src/components/cta-block/cta-block.scss
+++ b/packages/web-components/src/components/cta-block/cta-block.scss
@@ -56,7 +56,7 @@
     margin-bottom: $carbon--layout-03;
 
     @include carbon--breakpoint('md') {
-      margin-bottom: $carbon--layout-05;
+      margin-bottom: 0;
     }
   }
 
@@ -103,41 +103,38 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-
-  &:not(:first-of-type) {
-    @include carbon--breakpoint-down('md') {
-      padding-top: $carbon--layout-03;
-    }
-  }
+  border-bottom: 1px solid $gray-40;
 
   ::slotted(#{$dds-prefix}-cta-block-item) {
-    border-bottom: 1px solid $gray-20;
     margin-top: $spacing-07;
+    border-bottom: 1px solid $gray-20;
 
     @include carbon--breakpoint('md') {
+      margin-top: $spacing-09;
+      padding-bottom: $spacing-09;
       border: 0;
-      margin-top: 0;
     }
   }
 
   ::slotted(#{$dds-prefix}-cta-block-item:last-of-type) {
     border: 0;
+    padding-bottom: carbon--rem(64px);
+
+    @include carbon--breakpoint('md') {
+      padding-bottom: carbon--rem(96px);
+    }
+
+    @include carbon--breakpoint('lg') {
+      padding-bottom: carbon--rem(160px);
+    }
   }
 
   @include carbon--breakpoint('md') {
     grid-template-columns: repeat(2, 1fr);
-
-    ::slotted(#{$dds-prefix}-cta-block-item:first-of-type) {
-      margin-top: 0;
-    }
   }
 
   @include carbon--breakpoint('lg') {
     grid-template-columns: repeat(3, 1fr);
-  }
-
-  &.#{$prefix}--cta-block-item-row__border {
-    border-bottom: 1px solid $ui-03;
   }
 }
 
@@ -155,10 +152,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-
-  &:last-of-type {
-    padding-bottom: 0;
-  }
 
   ::slotted(#{$dds-prefix}-text-cta) {
     margin-left: 0;
